# OpenRabbit

./: .env.example  .gitignore  ai-code-reviewer-architecture.md  alembic.ini  claude.md  docker-compose.yml  init_db.py  openrabbit-20day-build-plan.md  pyproject.toml  test_llm.py  test_post_github.py
adrs/: ADR-0001-python-runtime.md  ADR-0002-fastapi-framework.md  ADR-0003-github-app-vs-oauth.md  ADR-0004-webhook-hmac-validation.md  ADR-0005-async-architecture.md  ADR-0006-postgresql-sqlalchemy.md  ADR-0007-celery-redis-task-queue.md  ADR-0008-docker-compose-dev.md  ADR-0009-poetry-dependency-management.md  ADR-0010-custom-diff-parser.md  ADR-0011-gatekeeper-filter-pattern.md  ADR-0012-installation-token-caching.md  ADR-0013-celery-task-architecture.md  ADR-0014-llm-client-retry-strategy.md  ADR-0015-pipeline-orchestrator-pattern.md  ADR-0020-tree-sitter-ast-parsing.md  ADR-0021-semantic-chunking-strategy.md  ADR-0022-review-context-dataclass.md  ADR-0023-five-stage-pipeline.md  ADR-0024-llm-model-routing.md  ADR-0025-ast-suggestion-validation.md  ADR-0026-two-step-deduplication.md  ADR-0027-multi-line-github-comments.md  ADR-0028-qdrant-vector-database.md  ADR-0029-openai-embedding-redis-cache.md  ADR-0030-github-tree-api-indexing.md  ADR-0031-incremental-pr-chunk-upsert.md  ADR-0032-semantic-retrieval-strategy.md  ADR-0033-nl-query-construction.md  ADR-0034-past-findings-org-memory.md  README.md  openrabbit-all-adrs-days1-2.md
app/: __init__.py  config.py  main.py
docs/: setup_guide.md
migrations/: env.py
tests/: test_comment_formatter.py  test_diff_parser.py  (+7 more)
(+54 files in other folders)
