[tool.poetry]
name = "openrabbit"
version = "0.1.0"
description = "AI-powered GitHub PR reviewer — self-hosted, open-source"
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.30"}
celery = {extras = ["redis"], version = "^5.4"}
redis = "^5.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.29"
psycopg2-binary = "^2.9"
alembic = "^1.13"
anthropic = "^0.40"
PyGithub = "^2.4"
httpx = "^0.27"
pydantic-settings = "^2.5"
python-multipart = "^0.0.12"
python-jose = {extras = ["cryptography"], version = "^3.3"}
structlog = "^24.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
pytest-mock = "^3.14"
ruff = "^0.7"
mypy = "^1.11"
black = "^24.10"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
